--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,6 +51,11 @@ li {
     height: 6vh;
 }
 
+#search button:hover {
+
+    cursor: pointer;
+}
+
 header a {
 
     color: inherit;
@@ -171,6 +176,11 @@ header a:hover {
     color: #ffffff;
     border: 0;
     border-radius: 3px;
+}
+
+.sec2-btn:hover {
+
+    cursor: pointer;
 }
 
 #square-images {
@@ -303,4 +313,3 @@ footer a:hover {
 
     background-color: #ffffff;
 }
-
