--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,11 +32,16 @@ menu {
     align-items: center;
 }
 
-nav menu h2,
+nav menu li:first-child{
+    font-size: 1.5rem;
+}
+
+nav menu,
 li {
     display: inline-block;
     margin: 2vh 1.5vw;
 }
+
 
 #search-item {
     padding: 1vh 1.5vw;
