--- a/CSS/style.css
+++ b/CSS/style.css
@@ -520,6 +520,11 @@ footer a:hover {
         width: 37%;
     }
 
+    .sec2-img {
+        height: 15vh;
+        width: 37%;
+    }
+
     .sec1-btn {
         height: auto;
         padding: 2vh 2vw;
