--- a/CSS/style.css
+++ b/CSS/style.css
@@ -495,6 +495,10 @@ footer a:hover {
 
 /*resizing images and modifying layout for a more mobile friendly design*/
 @media screen and (max-width: 480px) {
+    .slides{
+        height: auto;
+        min-height: auto;
+    }
 
     #slider-images {
         padding-top: 8vh;
